--- a/unrand_pwd.html
+++ b/unrand_pwd.html
@@ -8,8 +8,8 @@
   <meta name="description" content="Pashphrase Hasher"/>
   <meta name="author" content="QUINTIX"/>
 	
-	<script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha256.js"></script>
-	<script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/components/enc-base64-min.js"></script>
+	<script src="https://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha256.js"></script>
+	<script src="https://crypto-js.googlecode.com/svn/tags/3.1.2/build/components/enc-base64-min.js"></script>
 
 <script>
 "use strict";
