--- a/unrand_pwd.html
+++ b/unrand_pwd.html
@@ -71,7 +71,10 @@ function blur_onchange()
 	#obCntrl {float:right}
 	
 	/*rational: less secure than replacement chars ala password boxes;
-	 but make it possible to catch some typos and recognize a partially memorized password*/
+	 but make it possible to catch some typos and recognize a partially memorized password
+	 
+	 unfortunately, selecting text reveals whatever is hidden anyway
+	 WPF version does not have that problem, not sure how to fix it*/
 	.hideable {color:transparent; text-shadow: 0 0 6px rgba(0,0,0,1.0);}
 	.hideable:active{color:inherit; text-shadow:none;}
 </style>
@@ -84,14 +87,20 @@ function blur_onchange()
              		value="Correct Horse? battery staple!" oninput="updateOut()"/><span></div>
 		
         <div><span class="labels">Password Length: </span>
-
 			<input id="passLength" type="range" min="6" max="16" step="1" value="9" oninput="passLength_onchange()"/>
 		     <span id="length"> 9 </span>
-         </div>
+        </div>
 		<div>	<span class="labels">Resulting Password: </span>
-				<span id="holdPass"><input class="hideable" id="passOut" type="text" readonly/></span>
+				<span id="holdPass"><input class="hideable" id="passOut" type="text" readonly="true" size="16"/></span>
                 <span id="obCntrl">Obscure Text? <input type="checkbox" id="blur" checked="true" onChange="blur_onchange()"/></span>
 		</div>
+        <div style="display:block; font-size:small">
+        <p>Fair warning: Selecting text will make the password visible. 
+             For security reasons javascript on modern browsers cannot write directly to the clipboard, ergo no convient copy button to get around selecting.
+             Either way, this tool is not intended as a complete replacement for memorization. 
+             Rather it is for recalling passwords that are forgotten <a href="https://xkcd.com/936/">for one reason or another</a> and for the convient generation of new ones.</p>
+        <p style="text-align:right">Still, why not <a href="https://www.microsoft.com/en-gb/security/pc-security/password-checker.aspx">check how strong your generated password is?</a></p>
+        </div>
 	</form>
 </body>
 </html>
