--- a/unrand_pwd.html
+++ b/unrand_pwd.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<!-- Last Mod: 27 April 2015 @ 11:19 PM -->
+<!-- Last Mod: 3 July 2015 @ 7:11 PM -->
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -107,16 +107,17 @@ function blur_onchange()
 <body onload="updateOut()">
 	<form>
 		<div><span class="labels">Passphrase: </span>
-			 <span id="holdPhrase"><input class="hideable" type="text" id="passPhrase"
-             		value="Correct Horse? battery staple!" oninput="updateOut()"/><span></div>
+			 <span id="holdPhrase">
+			 	<input class="hideable" type="text" id="passPhrase"
+             			value="Correct Horse? battery staple!" oninput="updateOut()"/>
+             	</span></div>
 		
         <div><span class="labels">Password Length: </span>
 			<input id="passLength" type="range" min="6" max="16" step="1" value="9" oninput="passLength_onchange()"/>
-		     <span id="length"> 9 </span>
-        </div>
+		     <span id="length"> 9 </span></div>
 		<div>	<span class="labels">Resulting Password: </span>
-				<span id="holdPass"><input class="hideable" id="passOut" type="text" readonly="true" size="16"/></span>
-                <span id="obCntrl">Obscure Text? <input type="checkbox" id="blur" checked="true" onChange="blur_onchange()"/></span>
+				<span id="holdPass"><input class="hideable" id="passOut" type="text" readonly size="16"/></span>
+                <span id="obCntrl">Obscure Text? <input type="checkbox" id="blur" checked onChange="blur_onchange()"/></span>
 		</div>
         <div style="display:block; font-size:small">
         <p>Fair warning: Selecting text will make the password visible. 
