--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ function blur_onchange() //minor bug: voids "unhid" state (characters remaining 
 </script>
 <style type="text/css">
   body{ font-family:sans-serif; }
-  form{  margin-left:auto; margin-right:auto;}
+  form{  margin-left:auto; margin-right:auto; max-width:36em}
   form div {display:flex; margin-bottom:.5em}
   /* form div span {flex-grow:1} */
   /*form div {display:block}*/
