--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   <meta name="description" content="Pashphrase Hasher"/>
   <meta name="author" content="QUINTIX"/>
 	
-	<script src="https://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha256.js"></script>
-	<script src="https://crypto-js.googlecode.com/svn/tags/3.1.2/build/components/enc-base64-min.js"></script>
+	<script src="./rollups/sha256.js"></script>
+	<script src="./components/enc-base64-min.js"></script>
 	
 <!-- Copyright (c) 2015, QUINTIX
+
 All rights reserved.
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are met:
@@ -20,6 +21,14 @@ modification, are permitted provided that the following conditions are met:
 * Redistributions in binary form must reproduce the above copyright notice,
   this list of conditions and the following disclaimer in the documentation
   and/or other materials provided with the distribution.
+
+Uses Crypto-JS under BSD 3-Clause (c) 2009-2013 Jeff Mott All rights reserved.
+https://code.google.com/p/crypto-js/wiki/License
+"Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
+*Redistributions of source code must retain the above copyright notice, this list of conditions, and the following disclaimer.
+*Redistributions in binary form must reproduce the above copyright notice, this list of conditions, and the following disclaimer in the documentation or other materials provided with the distribution.
+*Neither the name CryptoJS nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission."
+  
 THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
@@ -29,7 +38,8 @@ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
 SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
 CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
-OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
+OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
+-->
 
 <script>
 "use strict";
