did not substitute const with var
Ideally I would not be using commits for such minor edits

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ function trimB64_sha256(string, length)
 //use passout to puke hash
 function updateOut() 
 { //taste and chew
-	/*const*/ MIN_IN = 12;
+	/*const*/ var MIN_IN = 12;
 	//http://stackoverflow.com/questions/22603078/syntaxerror-use-of-const-in-strict-mode
 	
     	var phrase = clean(passPhrase.value);
