--- a/unrand_pwd.html
+++ b/unrand_pwd.html
@@ -7,8 +7,10 @@
   <title>Not a random password generator</title>
   <meta name="description" content="Pashphrase Hasher"/>
   <meta name="author" content="QUINTIX"/>
-	
-	<script src="./rollups/sha256.js"></script>
+	<script src="./components/core.js"></script>
+	<script src="./components/hmac.js"></script>
+	<script src="./components/sha256.js"></script>  
+
 	<script src="./components/enc-base64-min.js"></script>
 	
 <!-- Copyright (c) 2015, QUINTIX
@@ -43,6 +45,9 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 <script>
 "use strict";
+/* sigh, global variables */
+var passOut, passPhrase, passLength, secretPin;
+
 /*todo: make regex filter editable and toLowerCase optional
 both are there to make recall easier based on the assumption that the cropped hash will still have a much smaller probability space than whatever text is put in*/
 function clean(phrase){return phrase.toLowerCase().replace(/[\W\d]/g,"");}
@@ -50,24 +55,32 @@ function clean(phrase){return phrase.toLowerCase().replace(/[\W\d]/g,"");}
 function trimB64_sha256(string, length)
 {	var hash = CryptoJS.SHA256(string);
 	return hash.toString(CryptoJS.enc.Base64).substring(0,length);}
+function trimB64_sha256HMAC(string,key,length)
+{	var hash = CryptoJS.HmacSHA256(string,key);
+	return hash.toString(CryptoJS.enc.Base64).substring(0,length);}
 //todo: enforce mix-case letters; sanity check for length 
-	 
 //	console.log(trimB64_sha256(cleaned_input,9));
 //use passout to puke hash
+
 function updateOut() 
 { //taste and chew
-	const MIN_IN = 12;
-	var passOut = document.getElementById("passOut");
-	var passPhrase = document.getElementById("passPhrase");
-    	var passLength = document.getElementById("passLength");
+	/*const*/ var MIN_IN = 12;
+	/*const*/ var MIN_PIN = 4;
+	//http://stackoverflow.com/questions/22603078/syntaxerror-use-of-const-in-strict-mode
+	
     	var phrase = clean(passPhrase.value);
     	var charsCaptured = phrase.length; 
     	var pwlength = passLength.value;
 	var blurCheck = document.getElementById("blur").checked;
+	var pin = (secretPin.value);
 	
 	//nervous about changing an element's CSS class with every keypress
 	if (charsCaptured >=  MIN_IN){ //enforce minimum character input length
-		var password = trimB64_sha256(phrase, pwlength); //turn into chyme		
+		var password;
+		if(pin.length < MIN_PIN)
+		{password = trimB64_sha256(phrase, pwlength);} //turn into chyme		
+		else {password = trimB64_sha256HMAC(phrase,pin,pwlength);}
+		
 		passOut.value = password; //puke
 		
 		if(blurCheck && passOut.className === "unhid"){ passOut.className="hideable";}		
@@ -78,13 +91,15 @@ function updateOut()
 			{passOut.className = "unhid";}
 	}
 }
+
 function passLength_onchange()
-{	var passLength = document.getElementById("passLength");
-    document.getElementById("length").innerHTML = passLength.value;
+{	//var passLength = document.getElementById("passLength");
+	document.getElementById("length").innerHTML = passLength.value;
 	updateOut();}
+
 function blur_onchange() //minor bug: voids "unhid" state (characters remaining state)
-{	var passOut = document.getElementById("passOut");
-	var passPhrase = document.getElementById("passPhrase");
+{	//var passOut = document.getElementById("passOut");
+	//var passPhrase = document.getElementById("passPhrase");
 	var blurCheck = document.getElementById("blur").checked;
 	
 	if(blurCheck){
@@ -93,6 +108,24 @@ function blur_onchange() //minor bug: voids "unhid" state (characters remaining 
 	}else{  passPhrase.className = null;
 		passOut.className=null;}
 }
+
+function clearExample() //clears the example pass phrase on first click
+{	//var passPhrase = document.getElementById("passPhrase"); 
+		//should not be so nervous about adding global variables
+		//these extra getElementById's may be redundant
+	passPhrase.removeEventListener("mouseup",clearExample);
+	passPhrase.select();
+}
+
+function onLoaded() //startup stuff
+{	passOut = document.getElementById("passOut");
+	passPhrase = document.getElementById("passPhrase");
+    	passLength = document.getElementById("passLength");
+	passPhrase.addEventListener("mouseup",clearExample);
+	secretPin = document.getElementById("secretPin");
+	updateOut();
+}
+
 </script>
 <style type="text/css">
   body{ font-family:sans-serif; }
@@ -100,12 +133,12 @@ function blur_onchange() //minor bug: voids "unhid" state (characters remaining 
   form div {display:flex; margin-bottom:.5em}
   /* form div span {flex-grow:1} */
   /*form div {display:block}*/
-  .labels{ margin-right:.5em; flex-shrink:0}
+  .labels{ margin-right:.25em; flex-shrink:0}
   #length {float:right; width:2em; text-align:right}
   #passPhrase {flex-grow:1}
   #passLength, #holdPhrase, #obCntrl {flex-grow:1}
   /* {display:inline-flex; flex-grow:100} */
-  #obCntrl {text-align:right}
+  #obCntrl {}
   #output {flex-wrap: wrap}
   
   /*rational: less secure than replacement chars ala password boxes;
@@ -116,31 +149,35 @@ function blur_onchange() //minor bug: voids "unhid" state (characters remaining 
   .hideable:active{color:inherit; text-shadow:none;}
   .unhid {color:blue}
   #passOut {font-family:monospace}
+  #secretPin {margin-right:1em}
+  
 </style>
-</head>
 
-<body onload="updateOut()">
+<body onload="onLoaded()">
 <form>
   	<div>
         <span class="labels">Passphrase: </span>
-			 	<input class="hideable" type="text" id="passPhrase"
+			 	<input class="hideable" type="text" id="passPhrase" 
              			value="Correct Horse? battery staple!" oninput="updateOut()"/>
     </div>
 		
     <div><div class="labels">Password Length: </div>
 			<input id="passLength" type="range" min="6" max="16" step="1" value="9" oninput="passLength_onchange()"/>
 		     <span id="length"> 9 </span></div>
-		<div id="output">	<span class="labels">Resulting Password: </span>
-				<input class="hideable" id="passOut" type="text" readonly size="16"/>
-                <span id="obCntrl">Obscure Text? <input type="checkbox" id="blur" checked onChange="blur_onchange()"/></span>
-		</div>
+		<div id="output">	
+        <span class="labels">Pin:</span>
+        <input type="password" id="secretPin" size="4" onInput="updateOut()"/>
+                <span id="obCntrl">Obscure Text?<input type="checkbox" id="blur" checked onChange="blur_onchange()"/></span>
+        <span><span class="labels">Resulting Password: </span>
+  			<input class="hideable" id="passOut" type="text" readonly size="16"/></span>
+
+</div>
         <div style="display:block; font-size:small">
       <p>Fair warning: Selecting text will make the password visible. 
              For security reasons javascript on modern browsers cannot write directly to the clipboard, ergo no convient copy button to get around selecting.
              Either way, this tool is not intended as a complete replacement for memorization. 
              Rather it is for recalling passwords that are forgotten <a href="https://xkcd.com/936/">for one reason or another</a> and for the convient generation of new ones.</p>
-        <p style="text-align:right">Still, why not <a href="https://www.microsoft.com/en-gb/security/pc-security/password-checker.aspx">check how strong your generated password is?</a></p>
+        <p style="text-align:right">Still, why not <a href="http://www.passwordmeter.com/">check how strong your generated password is?</a></p>
         </div>
 </form>
 </body>
-</html>
