head tag was not closed
how did I do that?

--- a/unrand_pwd.html
+++ b/unrand_pwd.html
@@ -152,6 +152,7 @@ function onLoaded() //startup stuff
   #secretPin {margin-right:1em}
   
 </style>
+</head>
 
 <body onload="onLoaded()">
 <form>
