--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  	<meta charset="utf-8"/>
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<meta name="description" content="Pashphrase Hasher"/>
+  	<meta name="author" content="QUINTIX"/>
 
-  <title>Not a random password generator</title>
-  <meta name="description" content="Pashphrase Hasher"/>
-  <meta name="author" content="QUINTIX"/>
-	
-	<script src="./rollups/sha256.js"></script>
-	<script src="./components/enc-base64-min.js"></script>
+  	<title>Not a random password generator</title>
+ 	
+	<script src="./components/core-min.js" type="application/javascript"></script>
+	<script src="./components/hmac-min.js" type="application/javascript"></script>
+	<script src="./components/sha256-min.js" type="application/javascript"></script>  
+
+	<script src="./components/enc-base64-min.js" type="application/javascript"></script>
 	
 <!-- Copyright (c) 2015, QUINTIX
 
@@ -24,10 +27,16 @@ modification, are permitted provided that the following conditions are met:
 
 Uses Crypto-JS under BSD 3-Clause (c) 2009-2013 Jeff Mott All rights reserved.
 https://code.google.com/p/crypto-js/wiki/License
-"Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
-*Redistributions of source code must retain the above copyright notice, this list of conditions, and the following disclaimer.
-*Redistributions in binary form must reproduce the above copyright notice, this list of conditions, and the following disclaimer in the documentation or other materials provided with the distribution.
-*Neither the name CryptoJS nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission."
+"Redistribution and use in source and binary forms, with or without 
+modification, are permitted provided that the following conditions are met:
+*Redistributions of source code must retain the above copyright notice, 
+this list of conditions, and the following disclaimer.
+*Redistributions in binary form must reproduce the above copyright notice,
+this list of conditions, and the following disclaimer in the documentation or 
+other materials provided with the distribution.
+*Neither the name CryptoJS nor the names of its contributors may be used to
+endorse or promote products derived from this software without specific prior
+written permission."
   
 THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
@@ -44,57 +53,102 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 <script>
 "use strict";
 /* sigh, global variables */
-var passOut, passPhrase, passLength;
+var passOut, passPhrase, passLength, secretPin, blurCheck;
+var isMSBrowser = navigator.userAgent.match(/(MSIE|Trident|Edge)/) != null;
 
 /*todo: make regex filter editable and toLowerCase optional
-both are there to make recall easier based on the assumption that the cropped hash will still have a much smaller probability space than whatever text is put in*/
+both are there to make recall easier based on the assumption that the cropped
+hash will still have a much smaller probability space than whatever text is
+put in*/
 function clean(phrase){return phrase.toLowerCase().replace(/[\W\d]/g,"");}
-/*actual 'password generation'; something more (or would it be less?) sophisticated could be done, say using the hash as a seed for a CSPRNG (just now learned that acronym -- 15 June) to be used by a more traditional password generator; but IMO this (and the things I added for the full-fledged standalone app I've been working on) is plenty good enough*/
+/*actual password generation; something more (or would it be less?)
+sophisticated could be done, say using the hash as a seed for a CSPRNG (just 
+now learned that acronym -- 15 June) to be used by a more traditional password
+generator; but IMO this (and the things I added for the full-fledged standalone
+app I've been working on) is plenty good enough*/
 function trimB64_sha256(string, length)
 {	var hash = CryptoJS.SHA256(string);
+	return hash.toString(CryptoJS.enc.Base64).substring(0,length);}
+function trimB64_sha256HMAC(string,key,length)
+{	var hash = CryptoJS.HmacSHA256(string,key);
 	return hash.toString(CryptoJS.enc.Base64).substring(0,length);}
 //todo: enforce mix-case letters; sanity check for length 
 //	console.log(trimB64_sha256(cleaned_input,9));
 //use passout to puke hash
+
+var hide = isMSBrowser ? 
+function()
+{	if(passPhrase.type == "text") { passPhrase.type = "password"; }
+	if(passOut.className == "status"){
+		passOut.type = "text";}
+	else{ 	if(passOut.type="text") { passOut.type = "password"; } 
+	}
+}:
+function()
+{	if(passPhrase.className != "blurred") { passPhrase.className = "blurred"; }
+	if(passOut.className !="status" || passout.className != "blurred"){
+		passOut.className = "blurred"; }
+};
+
+var reveal = isMSBrowser ? 
+function()
+{	passPhrase.type = "text"
+	passOut.type = "text"
+}:
+function()
+{	passPhrase.className = null;
+	if(passOut.className != "status"){passOut.className = null;}
+};
+
 function updateOut() 
 { //taste and chew
 	/*const*/ var MIN_IN = 12;
-	//http://stackoverflow.com/questions/22603078/syntaxerror-use-of-const-in-strict-mode
+	/*const*/ var MIN_PIN = 4;
+//http://stackoverflow.com/questions/22603078/syntaxerror-use-of-const-in-strict-mode
 	
     	var phrase = clean(passPhrase.value);
     	var charsCaptured = phrase.length; 
     	var pwlength = passLength.value;
-	var blurCheck = document.getElementById("blur").checked;
+	var pin = (secretPin.value);
 	
-	//nervous about changing an element's CSS class with every keypress
 	if (charsCaptured >=  MIN_IN){ //enforce minimum character input length
-		var password = trimB64_sha256(phrase, pwlength); //turn into chyme		
+		var password;
+		if(pin.length < MIN_PIN)
+		{password = trimB64_sha256(phrase, pwlength);} //turn into chyme		
+		else {password = trimB64_sha256HMAC(phrase, pin, pwlength);
+			localStorage.setItem("pin", pin); //persist PIN between sessions
+		}
+		
 		passOut.value = password; //puke
 		
-		if(blurCheck && passOut.className === "unhid"){ passOut.className="hideable";}		
+		if( passOut.className === "status" ) { passOut.className=null; }		
 	} 
-	else{
+	else{ 	
 		passOut.value = (MIN_IN - charsCaptured) + " remain";
-		if(passOut.className === "hideable" || passOut.className === "null")
-			{passOut.className = "unhid";}
+		if(passOut.className != "status")
+			{passOut.className = "status";}
 	}
+	//if(blurCheck.checked){hide();} else {}
+	blur_onchange();
 }
 
 function passLength_onchange()
 {	//var passLength = document.getElementById("passLength");
 	document.getElementById("length").innerHTML = passLength.value;
+	localStorage.setItem
+		("pwLen", passLength.value.toString());//persistance
 	updateOut();}
 
 function blur_onchange() //minor bug: voids "unhid" state (characters remaining state)
 {	//var passOut = document.getElementById("passOut");
 	//var passPhrase = document.getElementById("passPhrase");
-	var blurCheck = document.getElementById("blur").checked;
-	
-	if(blurCheck){
-		passPhrase.className = "hideable";
-		passOut.className = "hideable";
-	}else{  passPhrase.className = null;
-		passOut.className=null;}
+	if(blurCheck.checked){ hide();
+		//passPhrase.className = "blurred";
+		//passOut.className = "blurred";
+	}else{  reveal();
+		//passPhrase.className = null;
+		//passOut.className=null; 
+	}
 }
 
 function clearExample() //clears the example pass phrase on first click
@@ -105,12 +159,32 @@ function clearExample() //clears the example pass phrase on first click
 	passPhrase.select();
 }
 
+function selectFullPW() //default select ends on 'punctuation'
+{	passOut.select(); }
+
 function onLoaded() //startup stuff
 {	passOut = document.getElementById("passOut");
 	passPhrase = document.getElementById("passPhrase");
     	passLength = document.getElementById("passLength");
 	passPhrase.addEventListener("mouseup",clearExample);
+	secretPin = document.getElementById("secretPin");
+	blurCheck = document.getElementById("blur");
+	if(isMSBrowser){ console.log(navigator.userAgent);
+		passPhrase.className = null;
+		passOut.className = null;
+	}
+
+	//persistance (candidate Pin, Length)
+	var candPin = localStorage.getItem("pin");
+	var candLength = localStorage.getItem("pwLen");
+	secretPin.value = candPin;
+	if(candLength != null) { 
+		passLength.value= parseInt(candLength);
+		document.getElementById("length").innerHTML = passLength.value;
+	}
+
 	updateOut();
+	
 }
 
 </script>
@@ -120,47 +194,63 @@ function onLoaded() //startup stuff
   form div {display:flex; margin-bottom:.5em}
   /* form div span {flex-grow:1} */
   /*form div {display:block}*/
-  .labels{ margin-right:.5em; flex-shrink:0}
+  .labels{ margin-right:.25em; flex-shrink:0}
   #length {float:right; width:2em; text-align:right}
   #passPhrase {flex-grow:1}
   #passLength, #holdPhrase, #obCntrl {flex-grow:1}
   /* {display:inline-flex; flex-grow:100} */
-  #obCntrl {text-align:right}
+  #obCntrl { text-align:left}
   #output {flex-wrap: wrap}
   
-  /*rational: less secure than replacement chars ala password boxes;
-  but make it possible to catch some typos and recognize a partially memorized password
-  unfortunately, selecting text reveals whatever is hidden anyway
-  WPF version does not have that problem, not sure how to fix it*/
-  .hideable {color:transparent; text-shadow: 0 0 6px rgba(0,0,0,1.0);}
-  .hideable:active{color:inherit; text-shadow:none;}
-  .unhid {color:blue}
+  .blurred {color:transparent; text-shadow: 0 0 6px rgba(0,0,0,1.0);}
+/* does not work in IE11 or EDGE*/
+
+  .blurred:active {color:inherit; text-shadow:none;}
+  .status {color:blue}
   #passOut {font-family:monospace}
+  #secretPin {margin-right:1em}
+
 </style>
 </head>
-
 <body onload="onLoaded()">
 <form>
-  	<div>
+
+<div>
         <span class="labels">Passphrase: </span>
-			 	<input class="hideable" type="text" id="passPhrase" 
-             			value="Correct Horse? battery staple!" oninput="updateOut()"/>
-    </div>
+	<input class="blurred" type="text" id="passPhrase" 
+             	value="Correct Horse? battery staple!" oninput="updateOut()"/>
+</div>
 		
-    <div><div class="labels">Password Length: </div>
-			<input id="passLength" type="range" min="6" max="16" step="1" value="9" oninput="passLength_onchange()"/>
-		     <span id="length"> 9 </span></div>
-		<div id="output">	<span class="labels">Resulting Password: </span>
-				<input class="hideable" id="passOut" type="text" readonly size="16"/>
-                <span id="obCntrl">Obscure Text? <input type="checkbox" id="blur" checked onChange="blur_onchange()"/></span>
-		</div>
-        <div style="display:block; font-size:small">
+<div>
+	<div class="labels">Password Length: </div>
+	<input id="passLength" type="range" min="6" max="16" step="1" value="9" 
+		onchange="passLength_onchange()"/>
+		<!-- for whatever reason onInput does not work in IE-->
+	<span id="length"> 9 </span>
+</div>
+	
+<div id="output">	
+        <span class="labels">Pin:</span>
+       	<input type="password" id="secretPin" size="4" onInput="updateOut()"/>
+	<span id="obCntrl">Obscure Text?<input type="checkbox" id="blur" 
+		checked onchange="blur_onchange()"/></span>
+        <span> <span class="labels">Resulting Password: </span>
+		<input class="blurred" id="passOut" type="text" readonly 
+			size="16" onselect="selectFullPW()"/> </span>
+</div>
+
+<div style="display:block; font-size:small">
       <p>Fair warning: Selecting text will make the password visible. 
-             For security reasons javascript on modern browsers cannot write directly to the clipboard, ergo no convient copy button to get around selecting.
-             Either way, this tool is not intended as a complete replacement for memorization. 
-             Rather it is for recalling passwords that are forgotten <a href="https://xkcd.com/936/">for one reason or another</a> and for the convient generation of new ones.</p>
-        <p style="text-align:right">Still, why not <a href="https://www.microsoft.com/en-gb/security/pc-security/password-checker.aspx">check how strong your generated password is?</a></p>
-        </div>
+For security reasons javascript on modern browsers cannot write directly to the
+clipboard, ergo no convient copy button to get around selecting. Either way,
+this tool is not intended as a complete replacement for memorization. Rather
+it is for recalling passwords that are forgotten 
+<a href="https://xkcd.com/936/">for one reason or another</a> and for the 
+convient generation of new ones.</p>
+        <p style="text-align:right">Still, why not 
+<a href="http://www.passwordmeter.com/">check how strong your generated
+password is?</a></p>
+</div>
+
 </form>
 </body>
-</html>
